fixed bottom spacing for settings tab

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -96,7 +96,7 @@
 
 .settingstab {
     padding-bottom: .23em !important;
-    padding-top: .3em !important;
+    padding-top: .33em !important;
     padding-left: .35em !important;
     padding-right: .35em !important;
     margin-right: 0px !important;
